# masters-project

./: .gitignore  CMakeLists.txt  README.md  buildDockerImage.sh  config.json
Docker/: Dockerfile
Docker/cnc-docker/: docker-compose.yml  openDockerTerminal.sh
Docker/cnc-docker/shared/: config (copy).json  config.json
lib/: json.c  json.h  switch.c  switch.h  utils.c  utils.h
src/: main.c
